remove overflow from body, and footer's made fixed

--- a/src/components/PostList/PostList.module.scss
+++ b/src/components/PostList/PostList.module.scss
@@ -1,3 +1,3 @@
 .item {
-  @apply flex flex-col gap-2 py-3 relative h-[500px] overflow-hidden overflow-y-auto;
+  @apply flex flex-col gap-2 py-3 h-screen mb-6 relative overflow-hidden overflow-y-auto;
 }
